@@ -33,9 +33,9 @@ fizyr-rpc-macros = { version = "=0.5.0-alpha8", path = "macros", optional = true
 
 [dev-dependencies]
 assert2 = "0.3.3"
+clap = { version = "3.1.10", features = ["derive"] }
 tokio = { version = "1.0.0", features = ["macros"] }
 fizyr-rpc = { path = ".", features = ["unix-seqpacket", "unix-stream", "tcp"] }
-structopt = "0.3.18"
 memfile = "0.2.0"
 
 [package.metadata.docs.rs]
