@@ -1,18 +1,15 @@
 use fizyr_rpc::TcpListener;
-use structopt::StructOpt;
 
-#[derive(StructOpt)]
-#[structopt(setting = structopt::clap::AppSettings::ColoredHelp)]
-#[structopt(setting = structopt::clap::AppSettings::UnifiedHelpMessage)]
-#[structopt(setting = structopt::clap::AppSettings::DeriveDisplayOrder)]
+#[derive(clap::Parser)]
+#[clap(setting = clap::AppSettings::DeriveDisplayOrder)]
 struct Options {
-	#[structopt(default_value = "[::]:12345")]
+	#[clap(default_value = "[::]:12345")]
 	bind: String,
 }
 
 #[tokio::main(flavor = "current_thread")]
 async fn main() {
-	if let Err(e) = do_main(&Options::from_args()).await {
+	if let Err(e) = do_main(&clap::Parser::parse()).await {
 		eprintln!("Error: {}", e);
 		std::process::exit(1);
 	}
